@@ -200,6 +200,7 @@ Version 1.5
  - Add Tronika Touch Panel Wall Controller - ZSC-01D (Nechry)
  - Add Dome Door/Window Sensor Pro (Nechry)
  - Add Dome Motion Detector (Nechry)
+ - Add Dome Leak Sensor (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
